@@ -120,3 +120,9 @@ bool square::CanBeSeenBy(const character* Who, bool IgnoreDarkness) const
   else
     return CanBeSeenFrom(Who->GetPos(), Who->GetLOSRangeSquare(), IgnoreDarkness);
 }
+
+bool square::EngravingsCanBeReadByPlayer()
+{
+  return EngravingsCanBeReadByCharacter(game::GetPlayer());
+}
+
